kubernetes/networking/minio-external/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-external-service
  namespace: networking
spec:
  type: ExternalName
  externalName: 192.168.69.70
