kubernetes/networking/minio-external/minio-ingress.yaml
cd apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: minio-app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.mcmumf.dev
      secretName: minio-ingress-cert
  rules:
    - host: minio.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-external-service
                port:
                  number: 9090
